# openusage-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  OPENUSAGE_DIFFERENCES.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  daemon-modes.md  development.md  installation.md  plugin-overrides.md  usage.md
plugin-overrides/: codex.js
src/: config.rs  daemon.rs  discovery.rs  http_api.rs  instance_control.rs  lib.rs  main.rs  main_cli_preparse.rs  main_path_resolution.rs  main_systemd.rs  restart_watcher.rs
src/plugin_engine/: host_api.rs  manifest.rs  mod.rs  runtime.rs  script_patch.rs
tests/: codex_override.rs  daemon_discovery.rs  http_smoke.rs  plugin_compatibility.rs
